--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "qs": "^6.9.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
