--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-camera": "^3.40.0",
     "react-native-cardview": "^2.0.5",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-crop-picker": "^0.35.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
